--- a/.github/workflows/cmake-linux.yml
+++ b/.github/workflows/cmake-linux.yml
@@ -3,7 +3,7 @@ name: CMake build on Linux
 on:
   push:
     branches: [ "main", "dev" ]
-  pull_requests:
+  pull_request:
     branches: [ "main", "dev" ]
 
 jobs:
@@ -41,7 +41,7 @@ jobs:
             -DCMAKE_C_COMPILER=${{ matrix.config.cc }} \
             -DCMAKE_BUILD_TYPE=${{ matrix.config.buildType }} \
             -G ${{ matrix.config.generator }} \
-            -DENABLE_COERAGE=ON
+            -DENABLE_COVERAGE=ON
 
       - name: Build
         run: cmake --build build
@@ -80,8 +80,8 @@ jobs:
         }
 
     steps:
-      -name: Checkout repository
-       uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set reusable Strings
         id: strings
@@ -106,7 +106,7 @@ jobs:
         run: |
           cmake \
             --build ${{ steps.strings.outputs.build-output-dir }} \
-            --config ${{ matrix.buildType }}
+            --config ${{ matrix.config.buildType }}
 
       - name: Test
         working-directory: ${{ steps.strings.outputs.build-output-dir }}
