--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -4,9 +4,9 @@ name: CMake on multiple platforms
 
 on:
   push:
-    branches: [ "main", "dev" ]
+    branches: []
   pull_request:
-    branches: [ "main", "dev" ]
+    branches: []
 
 jobs:
   build:
