--- a/.github/workflows/cmake-linux.yml
+++ b/.github/workflows/cmake-linux.yml
@@ -17,15 +17,15 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         buildType: [Release]
-        cc: [gcc, clang]
+        c_compiler: [gcc, clang]
         generator: [Ninja]
         include:
           - os: ubuntu-latest
-            cc: gcc
-            ccx: g++
+            c_compiler: gcc
+            cxx_compiler: g++
           - os: ubuntu-latest
-            cc: clang
-            ccx: clang++
+            c_compiler: clang
+            cxx_compiler: clang++
 
     steps:
       - name: Checkout repository
@@ -45,8 +45,8 @@ jobs:
           cmake \
             -S ${{ github.workspace }} \
             -B ${{ steps.strings.outputs.build-output-dir }} \
-            -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} \
-            -DCMAKE_C_COMPILER=${{ matrix.cc }} \
+            -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} \
+            -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
             -DCMAKE_BUILD_TYPE=${{ matrix.buildType }} \
             -G ${{ matrix.generator }}
 
