fix: correct cmake command

--- a/.github/workflows/cmake-linux.yml
+++ b/.github/workflows/cmake-linux.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           cmake \
             --build ${{ steps.strings.outputs.build-output-dir }} \
-            - ${{ matrix.buildType }}
+            --config ${{ matrix.buildType }}
 
       - name: Test
         working-directory: ${{ steps.strings.outputs.build-output-dir }}
