--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,20 @@ project(
     LANGUAGES CXX
 )
 
+find_program(CLANG_FORMAT NAMES clang-format)
+if(CLANG_FORMAT)
+    file(GLOB_RECURSE SOURCE_FILES
+        ${PROJECT_SOURCE_DIR}/src/*.cpp
+        ${PROJECT_SOURCE_DIR}/src/*.hpp
+    )
+
+    add_custom_target(
+        format
+        COMMAND ${CLANG_FORMAT} -i ${SOURCE_FILES} --style=file:${CMAKE_SOURCE_DIR}/.clang-format
+        COMMENT "Run clang-format on all source and header files"
+    )
+endif()
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
