--- a/.github/workflows/clang-checks.yml
+++ b/.github/workflows/clang-checks.yml
@@ -13,8 +13,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install dependencies
         run: |
@@ -30,17 +28,5 @@ jobs:
             -G Ninja
 
       - name: run clang-format
-        run: cmake --build build --target format
-
-      - name: Commit changes and push
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          if git diff --staged --quiet; then
-            echo "No changes to commit."
-          else
-            git commit -m "refactor: apply clang-format"
-            git push origin HEAD:${{ github.ref_name }}
-          fi
+        run: cmake --build build --target format-check
 
