--- a/.github/workflows/clang-checks.yml
+++ b/.github/workflows/clang-checks.yml
@@ -19,7 +19,7 @@ jobs:
           sudo apt-get install -y clang-tidy clang-format ninja-build
 
       - name: Run clang-tidy
-        run: clang-tidy --quiet -p build $(find src/ -name '*.cpp')
+        run: clang-tidy --quiet -p --warnings-as-errors=* build $(find src/ -name '*.cpp')
 
       - name: Configure CMake
         run: |
