--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -7,19 +7,17 @@ on:
 
 jobs:
   build:
-    name: ${{ matrix.name }} (${{ matrix.buildType }})
+    name: Windows x64 (Release)
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
 
       matrix:
-        name: "Windows MSVC x64"
         os: [windows-latest]
         buildType: [Release]
         c_compiler: [cl]
         cxx_compiler: [cl]
-        arch: x64
         generators: Visual Studio 17 2022
 
     steps:
