--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -28,6 +28,7 @@ jobs:
         run: echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
       - name: Configure CMake
+        shell: bash
         run: |
           cmake \
             -S ${{ github.workspace }} \
@@ -37,6 +38,7 @@ jobs:
             -DCMAKE_BUILD_TYPE=${{ matrix.buildType }} \
 
       - name: Build
+        shell: bash
         run: |
           cmake \
             --build ${{ steps.strings.outputs.build-output-dir }} \
