--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -28,20 +28,18 @@ jobs:
         run: echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
       - name: Configure CMake
-        shell: bash
         run: |
-          cmake \
-            -S ${{ github.workspace }} \
-            -B ${{ steps.strings.outputs.build-output-dir }} \
-            -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} \
-            -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
-            -DCMAKE_BUILD_TYPE=${{ matrix.buildType }} \
+          cmake `
+            -S ${{ github.workspace }} `
+            -B ${{ steps.strings.outputs.build-output-dir }} `
+            -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} `
+            -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} `
+            -DCMAKE_BUILD_TYPE=${{ matrix.buildType }} `
 
       - name: Build
-        shell: bash
         run: |
-          cmake \
-            --build ${{ steps.strings.outputs.build-output-dir }} \
+          cmake `
+            --build ${{ steps.strings.outputs.build-output-dir }} `
             --config ${{ matrix.buildType }}
 
       - name: Test
